--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Delivery</string>
     <string name="menu_settings">Settings</string>
-    <string name="buildNumber">Build #1.1.0</string>
+    <string name="buildNumber">Build #1.1.1</string>
 
     <!-- Colors -->
     <color name="white">#F2F2F2</color>
@@ -37,5 +37,7 @@
     <string name="title_activity_display_menu">Menu and Info</string>
     <string name="title_activity_single_menu">Current Menu</string>
     <string name="title_activity_sort_merchants">Sort Restaurants</string>
+    <string name="title_activity_item_option">Item Option</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
